--- a/glowamber/src/main/webapp/resources/css/header.css
+++ b/glowamber/src/main/webapp/resources/css/header.css
@@ -1,11 +1,50 @@
 @charset "UTF-8";
+/* *************퀵메뉴************ */
+/* 퀵메뉴 */
+#quick_menu {
+	float: left;
+	position: sticky;
+	top: 600px;
+	left: calc(50% + 720px);
+	text-align: center;
+	display: inline-block;
+	width: auto;
+	border: 1px solid #888888;
+	box-shadow: 0px 0px 3px #888888;
+	border-radius: 5px;
+	font-weight: 600;
+	z-index: 1050;
+	background-color: white;
+}
+/* 사이즈가 작아지면 퀵메뉴 삭제 */
+@media all and (max-width: 1700px) {
+	/* 퀵메뉴 */
+	#quick_menu {
+		display: none;
+	}
 
+}
+/* 퀵메뉴 리스트 */
+#quick_menu li {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+/* 퀵메뉴 리스트 아이콘 */
+#quick_menu li svg {
+	margin-bottom: 10px;
+}
+/* 퀵메뉴 hr태그 */
+#quick_menu hr {
+	margin: auto;
+	padding: 0;
+	width: 70%;
+}
+
+/* *************퀵메뉴************ */
 /* 헤더 배경 */
 .header_background {
-	padding: 22px 0px;
+	padding: 22px;
 	height: 220px;
-	left: 240px;
-	top: 104px;
 	background: linear-gradient(90deg, #5A5A5A 0%, #3E3E3E 0.01%, #3E3E3E 37%, #5A5A5A
 		61%, #858585 100%);
 	border-radius: 2px;
@@ -48,12 +87,12 @@
 	color: white;
 }
 /* 고객센터 배경 및 글씨색 */
-.dropdown-menu {
+#header_nav>li:last-child .dropdown-menu {
 	color: white !important;
 	background-color: #5A5A5A !important
 }
 /* 고객센터 배경 및 글씨색 호버시 */
-.dropdown-item:hover {
+#header_nav>li:last-child .dropdown-item:hover {
 	color: #DEBD7E !important;
 	background-color: #5A5A5A !important
 }
@@ -115,20 +154,59 @@ a {
 	border-radius: 3px;
 	box-shadow: 0px 0px 3px #888888;
 }
-/* 헤더 메인 네비게이션 각 객체 */
-.main_nav_ui>li {
-	padding-top: 10px;
-	padding-bottom: 10px;
+/* 헤더 메인 네비게이션 카테고리 */
+.main_nav_ui>li:first-child {
+	padding-top: 3px;
 	font-weight: 600;
 	font-size: 25px;
 }
-/* 헤더 메인 네비게이션 각 객체 호버시 */
-.main_nav_ui>li:hover {
+/* 헤더 메인 네비게이션 카테고리제외  */
+.main_nav_ui>li:not(:first-child) {
+	padding-top: 11px;
+	font-weight: 600;
+	font-size: 25px;
+}
+/* 헤더 메인 네비게이션 각 객체 카테고리 */
+.main_nav_ui>li:first-child:hover {
 	color: #DEBD7E !important;
 }
-/* 헤더 메인 네비게이션 카테고리 */
+/* 헤더 메인 네비게이션 각 객체 카테고리 제외 */
+.main_nav_ui>li:not(:first-child):hover {
+	color: #DEBD7E !important;
+	text-decoration: underline;
+}
+/* 헤더 메인 네비게이션 카테고리 아이콘 */
 .main_nav_ui>li>a>svg {
-	margin-bottom: 8px;
+	margin-bottom: 6px;
 	margin-right: 2px;
 }
-
+/* 카테고리 드롭바 */
+.main_nav .dropdown-menu {
+	width: 26%;
+	box-sizing: border-box;
+	font-size: 20px;
+}
+/* 카테고리 드롭바 호버시 */
+.main_nav .dropdown-menu>li:hover {
+	color: #DEBD7E;
+}
+/* 카테고리 하위메뉴 클릭시 배경 변경금지 */
+.dropdown-item:active {
+	background-color: inherit !important;
+}
+/* 드롭다운 서브메뉴 위치 조정 */
+.dropdown-submenu {
+	position: relative;
+}
+/* 드롭다운 서브메뉴 우측으로나오게 */
+.dropdown-submenu .dropdown-menu {
+	top: -9px;
+	left: 100%;
+	width: auto;
+	margin-top: 0;
+	margin-left: 0;
+}
+/* 드롭다운 서브메뉴 호버시 나오게 */
+.dropdown-submenu:hover > .dropdown-menu {
+      display: block;
+}
