--- a/glowamber/src/main/webapp/resources/css/mainpage.css
+++ b/glowamber/src/main/webapp/resources/css/mainpage.css
@@ -1,5 +1,16 @@
 @charset "UTF-8";
 
-#body_container{
+/* 바디 컨테이너 */
+#body_container {
 	padding: 0 !important;
+	text-align: center;
+	margin-bottom: 10200px;
+}
+/* 상품 컨테이너 */
+#main_products {
+	text-align: center;
+}
+/* 상품 컨테이너 h2*/
+#main_products h2 {
+	margin-bottom: 50px;
 }
