진상 상세페이지 완성 241128

--- a/glowamber/src/main/webapp/resources/css/ProductDetail.css
+++ b/glowamber/src/main/webapp/resources/css/ProductDetail.css
@@ -4,7 +4,7 @@
 #quick_menu {
 	float: left;
 	position: sticky;
-	top: 500px;
+	top: 250px;
 	left: calc(50% + 720px);
 	text-align: center;
 	display: inline-block;
@@ -22,7 +22,6 @@
 	#quick_menu {
 		display: none;
 	}
-
 }
 /* 퀵메뉴 리스트 */
 #quick_menu li {
@@ -41,3 +40,148 @@
 }
 
 /* *************퀵메뉴************ */
+/* 바디 컨테이너 */
+#body_container {
+	margin-top: 50px;
+}
+/* 상품상세 테스트 보더 */
+#body_container div {
+	/* border: 2px solid red; */
+	
+}
+/* 상품상세 중간 줄 */
+#product_container hr {
+	margin: auto;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	width: 98%;
+	border-color: #cccccc;
+}
+/* 상품이미지 사이즈 */
+#product_img img {
+	width: 100%;
+	border-radius: 8px;
+}
+/* 상품갯수 조절 div */
+#product_counter>div {
+	display: inline-block;
+	border: 1px solid #888888;
+	border-radius: 1px;
+}
+/* 상품갯수 조절 중간 패딩 */
+#product_counter span {
+	display: inline-block;
+	padding-left: 6px;
+	padding-right: 6px;
+}
+/* 상품갯수 조절 중간 라인 */
+#product_counter span:nth-of-type(3) {
+	display: inline-block;
+	border-left: 1px solid #888888;
+}
+/* 상품갯수 조절 중간 라인 */
+#product_counter span:nth-of-type(1) {
+	display: inline-block;
+	border-right: 1px solid #888888;
+}
+/* 장바구니 담기 버튼 */
+#product_add {
+	margin-top: 50px;
+	width: 400px;
+	height: 60px;
+	background-color: #5A5A5A;
+	border-radius: 4px;
+	font-weight: 700;
+	font-size: 26px;
+	text-align: center;
+	letter-spacing: 3px;
+	color: #F8DE8B;
+}
+/* 설명 제목 폰트 조절 */
+.font_title{
+	font-size:20px;
+	font-weight:600;
+	color: #444444;
+}
+/* 설명 내용 폰트 조절 */
+.font_content{
+	font-size:15px;
+	color: #888888;
+	
+}
+/*******************************************************상품상세페이지 */
+/* 상품상세 컨테이너 */
+#detail_container{
+	margin-top: 100px;
+}
+/* 디테일 버튼 */
+.detail_button{
+	padding-bottom:15px;
+	padding-top:15px;
+	border: 1px solid #5A5A5A;
+	font-size: 20px;
+	font-weight: 500;
+	color: #5A5A5A;
+}
+/* 
+디테일 버튼 호버시
+.detail_button:hover{
+	border: 1px solid #5A5A5A;
+	font-weight: 600;
+	color: #F8DE8B;
+	background-color: #5A5A5A;
+}
+ */
+ /* 상품상세 이미지 간격 */
+ .detail_img img{
+	margin-top: 50px;
+}
+/**********************************************************후기 댓글 */
+/* div 경계선 */
+#reply_container div{
+	/* border: 2px solid red; */
+}
+/* 리플페이지 넘김버튼 */
+#reply_page_button i{
+	border: 1px solid #bbbbbb;
+	border-radius: 3px;
+	padding-right: 5px;
+	padding-left: 5px;
+}
+/*************************************************************문의페이지 */
+/* div 경계선 */
+#board_container div{
+	  /* border: 2px solid blue;   */
+}
+/* 문의 페이지 간격 */
+#board_container{
+	margin-top: 50px; 
+}
+/* 문의하기 버튼 */
+#q_button{
+	width: 150px;
+	height: 35px; 
+	font-size: 18px;
+	font-weight: 500;
+	background-color: #5a5a5a;
+	color: #F8DE8B;
+	border-radius: 3px;
+	margin-top: 15px;
+}
+/* 문의하기 헤더 */
+.borad_header{
+	font-size: 18px;
+	font-weight: 600;
+}
+#reply_container hr:first-of-type {
+	height:2px;
+	background: #5a5a5a;
+	border: 0;
+	opacity: 100;
+}
+#board_container hr:first-of-type{
+	height:2px;
+	background: #5a5a5a;
+	border: 0;
+	opacity: 100;
+}
