11/28 고객센터 페이지 업데이트

--- a/glowamber/src/main/webapp/resources/css/join.css
+++ b/glowamber/src/main/webapp/resources/css/join.css
@@ -3,210 +3,230 @@
 /*회원가입 배너 */
 #join_membership>div:first-of-type {
 	font-style: normal;
-	font-size:32px;
-	margin-top:40px;
-	margin-bottom:40px;
-	text-align:center;
-   
-    font-weight:bold;
-    
+	font-size: 32px;
+	margin-top: 40px;
+	margin-bottom: 40px;
+	text-align: center;
+	font-weight: bold;
 }
 
 /* 아이디 div 여백*/
-#join_id{
-padding:10px;	
+#join_id {
+	padding: 10px;
 }
 /*아이디창 여백*/
 #join_id>div:first-of-type {
-
-    padding-right:0;
-	
+	padding-right: 0;
 }
 /*아이디 제목*/
 #join_id>div:nth-of-type(2) {
-    text-align:right;
-    padding-top:12px;
-	
-	font-weight:bold;
-	font-size:15px;
+	text-align: right;
+	padding-top: 12px;
+	font-weight: bold;
+	font-size: 15px;
 }
 /*아이디 입력창 테두리*/
 #join_id>div:nth-of-type(3) {
-	text-align:center;
-	
+	text-align: center;
 }
 /*아이디 입력창*/
-#join_id>div:nth-of-type(3)>input{
+#join_id>div:nth-of-type(3)>input {
 	width: 400px;
-	height:50px;	
-	font-size:15px;
-	border-radius:5px;
+	height: 50px;
+	font-size: 15px;
+	border-radius: 5px;
 }
 /*비밀번호 입력창 div 여백*/
-#join_pass{
-padding:10px;	
+#join_pass {
+	padding: 10px;
 }
 /*비밀번호 입력창 여백*/
 #join_pass>div:first-of-type {
-
-    padding-right:0;
-	
+	padding-right: 0;
 }
 /*비밀번호 입력창 제목*/
 #join_pass>div:nth-of-type(2) {
-    text-align:right;
-    padding-top:12px;
-	font-weight:bold;
-	font-size:15px;
+	text-align: right;
+	padding-top: 12px;
+	font-weight: bold;
+	font-size: 15px;
 }
 /*비밀번호 입력창 테두리*/
 #join_pass>div:nth-of-type(3) {
-	text-align:center;
+	text-align: center;
 }
 /*비밀번호 입력창*/
-#join_pass>div:nth-of-type(3)>input{
+#join_pass>div:nth-of-type(3)>input {
 	width: 400px;
-	height:50px;	
-	font-size:15px;
-	border-radius:5px;
+	height: 50px;
+	font-size: 15px;
+	border-radius: 5px;
 }
 /*비밀번호 확인창  div 여백*/
-#join_repass{
-padding:10px;	
+#join_repass {
+	padding: 10px;
 }
 /*비밀번호 확인창 여백*/
 #join_repass>div:first-of-type {
-
-    padding-right:0;
-	
+	padding-right: 0;
 }
 /*비밀번호 확인창 제목*/
 #join_repass>div:nth-of-type(2) {
-    text-align:right;
-    padding-top:12px;
-	font-weight:bold;
-	font-size:15px;
+	text-align: right;
+	padding-top: 12px;
+	font-weight: bold;
+	font-size: 15px;
 }
 /*비밀번호 확인 입력창 테두리*/
 #join_repass>div:nth-of-type(3) {
-	text-align:center;
+	text-align: center;
 }
 /*비밀번호 확인 입력창*/
-#join_repass>div:nth-of-type(3)>input{
+#join_repass>div:nth-of-type(3)>input {
 	width: 400px;
-	height:50px;	
-	font-size:15px;
-	border-radius:5px;
+	height: 50px;
+	font-size: 15px;
+	border-radius: 5px;
 }
 /*이메일 입력창 div 여백*/
-#join_email{
-padding:10px;	
+#join_email {
+	padding: 10px;
 }
 /*이메일 입력창 여백*/
 #join_email>div:first-of-type {
-
-    padding-right:0;
+	padding-right: 0;
 }
 /*이메일 입력창 제목*/
 #join_email>div:nth-of-type(2) {
-    text-align:right;
-    padding-top:12px;
-	font-weight:bold;
-	font-size:15px;
+	text-align: right;
+	padding-top: 12px;
+	font-weight: bold;
+	font-size: 15px;
 }
 /*이메일 입력창 테두리*/
 #join_email>div:nth-of-type(3) {
-	text-align:center;
-	
+	text-align: center;
 }
 /*이메일 입력창 */
-#join_email>div:nth-of-type(3)>input{
+#join_email>div:nth-of-type(3)>input {
 	width: 400px;
-	height:50px;	
-	font-size:15px;
-	border-radius:5px;
+	height: 50px;
+	font-size: 15px;
+	border-radius: 5px;
 }
 /*이메일 입력창 인증 버튼 테두리*/
-#join_email>div:nth-of-type(4){
-	padding-top:5px;
-	text-align:left;
-	
+#join_email>div:nth-of-type(4) {
+	padding-top: 5px;
+	text-align: left;
 }
 /*이메일 입력창 인증 버튼 */
-#join_email>div:nth-of-type(4)>button{
-	
+#join_email>div:nth-of-type(4)>button {
 	width: 150px;
-	height:40px;	
-	font-size:15px;
-	border-radius:5px;
-	background-color:#FFFFFF;
+	height: 40px;
+	font-size: 15px;
+	border-radius: 5px;
+	background-color: #FFFFFF;
 }
 /*휴대폰  div 여백*/
-#join_cellphone{
-padding:10px;	
+#join_cellphone {
+	padding: 10px;
 }
 /*전화번호 입력창 여백*/
 #join_cellphone>div:first-of-type {
-
-    padding-right:0;
-	
+	padding-right: 0;
 }
 /*전화번호 입력창 제목*/
 #join_cellphone>div:nth-of-type(2) {
-    text-align:right;
-    padding-top:12px;
-	font-weight:bold;
-	font-size:15px;
+	text-align: right;
+	padding-top: 12px;
+	font-weight: bold;
+	font-size: 15px;
 }
 /*전화번호 입력창 테두리*/
 #join_cellphone>div:nth-of-type(3) {
-	text-align:center;
+	text-align: center;
 }
 /*전화번호 입력창*/
-#join_cellphone>div:nth-of-type(3)>input{
+#join_cellphone>div:nth-of-type(3)>input {
 	width: 400px;
-	height:50px;	
-	font-size:15px;
-	border-radius:5px;
+	height: 50px;
+	font-size: 15px;
+	border-radius: 5px;
 }
 /*주소  div 여백*/
 #join_address>div:first-of-type {
-
-    padding-right:0;
-	
+	padding-right: 0;
 }
 /*주소창 제목*/
 #join_address>div:nth-of-type(2) {
-    text-align:right;
-    padding-top:12px;
-	font-weight:bold;
-	font-size:15px;
+	text-align: right;
+	padding-top: 12px;
+	font-weight: bold;
+	font-size: 15px;
 }
 /*주소창 버튼 테두리 */
 #join_address>div:nth-of-type(3) {
-	text-align:center;
-	
+	text-align: center;
 }
 /*주소창 버튼*/
-#join_address>div:nth-of-type(3)>button{
+#join_address>div:nth-of-type(3)>button {
 	width: 400px;
-	height:50px;	
-	font-size:15px;
-	border-radius:5px;
-	background-color:#FFFFFF;
+	height: 50px;
+	font-size: 15px;
+	border-radius: 5px;
+	background-color: #FFFFFF;
 }
 
-#join_agree{
-	margin-left:160px;
-
+#join_agree {
+	margin-left: 105px;
 }
 
-#join_agree div{
-	border:2px solid red;
-	
+#join_agree div {
+	  /*  border: 2px solid red;  */
 }
-#fuck{
-	margin-left:300px;
-	font-size:10px;
+/*전체동의 설명*/
+#join_detail {
+	text-align: right;
+	font-size: 10px;
+}
+/*이용약관 체크박스*/
+.join_check>[type="checkbox"] {
+	width: 30px;
+	height: 30px;
+}
+/*전체 동의 합니다*/
+.join_font {
+	font-size: 25px;
+	margin-top:4px;
+}
+/*약관보기*/
+.join_about {
+	font-size:12px;
+	text-align: right;
+	margin-top:15px;
+}
+/*전제동의 아래 선택지 글*/
+div.join_d {
+	font-size: 15px;
+	margin-top: 12px;
+	/* border:2px solid blue; */
+}
+/*이용약관 전체 패딩*/
+#join_agree .col-6>.row {
+	padding: 10px;
+}
+/*SMS 이메일*/
+div.join_s{
+	margin-top:10px;
+	font-size: 15px;
 }
 
+#join_button>div:nth-of-type(3)>button {
+	width: 400px;
+	height: 50px;
+	font-size: 20px;
+	font-weight:bold;
+	border-radius: 5px;
+	background-color:#101010;
+	color:#F8DE8B;
+}
