--- a/glowamber/src/main/webapp/resources/css/header.css
+++ b/glowamber/src/main/webapp/resources/css/header.css
@@ -1,4 +1,46 @@
 @charset "UTF-8";
+/* *************퀵메뉴************ */
+/* 퀵메뉴 */
+#quick_menu {
+	float: left;
+	position: sticky;
+	top: 600px;
+	left: calc(50% + 720px);
+	text-align: center;
+	display: inline-block;
+	width: auto;
+	border: 1px solid #888888;
+	box-shadow: 0px 0px 3px #888888;
+	border-radius: 5px;
+	font-weight: 600;
+	z-index: 1050;
+	background-color: white;
+}
+/* 사이즈가 작아지면 퀵메뉴 삭제 */
+@media all and (max-width: 1700px) {
+	/* 퀵메뉴 */
+	#quick_menu {
+		display: none;
+	}
+
+}
+/* 퀵메뉴 리스트 */
+#quick_menu li {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+/* 퀵메뉴 리스트 아이콘 */
+#quick_menu li svg {
+	margin-bottom: 10px;
+}
+/* 퀵메뉴 hr태그 */
+#quick_menu hr {
+	margin: auto;
+	padding: 0;
+	width: 70%;
+}
+
+/* *************퀵메뉴************ */
 /* 헤더 배경 */
 .header_background {
 	padding: 22px;
