--- a/glowamber/src/main/webapp/resources/css/Footer.css
+++ b/glowamber/src/main/webapp/resources/css/Footer.css
@@ -1,5 +1,17 @@
 @charset "UTF-8";
 
+@font-face {
+	font-family: 'GowunDodum-Regular';
+	src:
+		url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/GowunDodum-Regular.woff')
+		format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
+
+footer{
+	font-family: 'GowunDodum-Regular' !important;
+}
 
 /* 풋터 왼쪽 컨테이너 div */
 .footer_left>div {
