--- a/glowamber/src/main/webapp/resources/css/ItemSample.css
+++ b/glowamber/src/main/webapp/resources/css/ItemSample.css
@@ -71,6 +71,7 @@ body {
 div#cate {
 	height :252px;
 	max-height : 252px;
+	min-height : 252px;
 }
 
 .categoryTable table{
@@ -81,6 +82,7 @@ div#cate {
     text-align: center;
     overflow-y: auto;
     border: 1px solid #CCCCCC;
+    border-radius: 8px;
     background-color: #FFFFFF;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     max-height : 300px;
