--- a/glowamber/src/main/webapp/resources/css/MainPage.css
+++ b/glowamber/src/main/webapp/resources/css/MainPage.css
@@ -1,13 +1,6 @@
 @charset "UTF-8";
 
-@font-face {
-	font-family: 'GowunDodum-Regular';
-	src:
-		url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/GowunDodum-Regular.woff')
-		format('woff');
-	font-weight: normal;
-	font-style: normal;
-}
+
 /* *************퀵메뉴************ */
 /* 퀵메뉴 */
 #quick_menu {
@@ -49,9 +42,7 @@
 }
 
 /* *************퀵메뉴************ */
-body{
-	font-family: GowunDodum-Regular !important;
-}
+
 /* 바디 컨테이너 */
 #body_container {
 	padding: 0 !important;
@@ -65,4 +56,34 @@ body{
 /* 상품 컨테이너 h2*/
 #main_products h2 {
 	margin-bottom: 50px;
+}
+/* 캐러샐 이미지 */
+.carouesl_img img{
+	width: 200px;
+	border-radius: 5px; 
+	box-shadow: 0px 0px 3px #888888;
+}
+/* 캐러샐 버튼 */
+.carouesl_button button{
+	border: none;
+	margin-top: 5px;
+	width: 200px;
+	border-radius: 2px; 
+	box-shadow: 0px 0px 3px #888888;
+	background: white;
+	color: #555555;
+}
+/* 캐러샐 상품명*/
+.carouesl_name {
+	font-size: 18px;
+	font-weight: 600;
+	color: #555555;
+	text-align: left;
+}
+/* 캐러샐 가격*/
+.carouesl_price {
+	font-size: 14px;
+	font-weight: 200;
+	color: #555555;
+	text-align: left;
 }
