--- a/glowamber/src/main/webapp/resources/css/mainpage.css
+++ b/glowamber/src/main/webapp/resources/css/mainpage.css
@@ -1,10 +1,53 @@
 @charset "UTF-8";
 
+
+/* *************퀵메뉴************ */
+/* 퀵메뉴 */
+#quick_menu {
+	float: left;
+	position: sticky;
+	top: 250px;
+	left: calc(50% + 720px);
+	text-align: center;
+	display: inline-block;
+	width: auto;
+	border: 1px solid #888888;
+	box-shadow: 0px 0px 3px #888888;
+	border-radius: 5px;
+	font-weight: 600;
+	z-index: 1050;
+	background-color: white;
+}
+/* 사이즈가 작아지면 퀵메뉴 삭제 */
+@media all and (max-width: 1700px) {
+	/* 퀵메뉴 */
+	#quick_menu {
+		display: none;
+	}
+}
+/* 퀵메뉴 리스트 */
+#quick_menu li {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+/* 퀵메뉴 리스트 아이콘 */
+#quick_menu li svg {
+	margin-bottom: 10px;
+}
+/* 퀵메뉴 hr태그 */
+#quick_menu hr {
+	margin: auto;
+	padding: 0;
+	width: 70%;
+}
+
+/* *************퀵메뉴************ */
+
 /* 바디 컨테이너 */
 #body_container {
 	padding: 0 !important;
 	text-align: center;
-	margin-bottom: 10200px;
+	margin-bottom: 200px;
 }
 /* 상품 컨테이너 */
 #main_products {
@@ -13,4 +56,59 @@
 /* 상품 컨테이너 h2*/
 #main_products h2 {
 	margin-bottom: 50px;
+}
+/* 캐러샐 이미지 */
+.carouesl_img img{
+	height: 100%;
+	width: 98%;
+	border-radius: 5px; 
+	box-shadow: 0px 0px 3px #888888;
+}
+/* 캐러샐 버튼 */
+.carouesl_button button{
+	border: none;
+	margin-top: 5px;
+	width: 98.2%;
+	border-radius: 2px; 
+	box-shadow: 0px 0px 3px #888888;
+	background: white;
+	color: #555555;
+	font-size: 22px;
+	letter-spacing: 4px;
+}
+/* 캐러샐 상품명*/
+.carouesl_name {
+	font-size: 24px;
+	font-weight: 600;
+	color: #555555;
+	text-align: left;
+}
+/* 캐러샐 가격*/
+.carouesl_price {
+	font-size: 18px;
+	font-weight: 600;
+	color: #555555;
+	text-align: left;
+}
+/* 버튼범위 및 버튼 */
+#main_products .carousel-control-prev,#main_products .carousel-control-next {
+    position:absolute;
+    top:250px;
+    width: 50px !important; /* 너비 줄이기 */
+    height: 50px; /* 높이 줄이기 */
+    border-radius: 50% ;
+    background: white ;
+    box-shadow: 0 0 3px #888888 ;
+}
+
+/* 아이콘 크기 및 색상 */
+#main_products .carousel-control-prev-icon,#main_products .carousel-control-next-icon {
+    width: 30px ; /* 아이콘 너비 */
+	height: 30px ; /* 아이콘 높이 */
+    filter: invert(1) ;
+}
+
+/* 버튼 hover 효과 */
+#main_products .carousel-control-prev:hover,#main_products .carousel-control-next:hover {
+    background-color: rgba(f, f, f, 1); /* hover 시 진한 배경색 */
 }
