관리자 페이지 상품관리탭 카테고리 입력, 수정, 삭제, 출력 완료 catemapper, catedao, cateservice 에 데이터 추가됨

--- a/glowamber/src/main/webapp/resources/css/AdminMain.css
+++ b/glowamber/src/main/webapp/resources/css/AdminMain.css
@@ -143,13 +143,10 @@ div>.listTable_store>div{
 .infoTable input{
 	width:100%;
 }
-#BigCateNum, #SmallCateNum {
+#CateNum{
 	width:38px;	
 }
 
-#BigCateInput, #SmallCateInput {
-	width:165px;
-}
 
 input[type="text"], input[type="file"], select {
     padding: 5px;
