--- a/glowamber/src/main/webapp/resources/css/Header.css
+++ b/glowamber/src/main/webapp/resources/css/Header.css
@@ -1,10 +1,14 @@
 @charset "UTF-8";
+
 @font-face {
-    font-family: 'Gyeonggi_Batang_Regular';
-    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2410-3@1.0/Batang_Regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
+	font-family: 'Gyeonggi_Batang_Regular';
+	src:
+		url('https://fastly.jsdelivr.net/gh/projectnoonnu/2410-3@1.0/Batang_Regular.woff')
+		format('woff');
+	font-weight: 400;
+	font-style: normal;
 }
+
 @font-face {
 	font-family: 'GowunDodum-Regular';
 	src:
@@ -13,17 +17,20 @@
 	font-weight: normal;
 	font-style: normal;
 }
-body{
+
+body {
 	font-family: GowunDodum-Regular !important;
 }
-.header{
-	padding:0 !important;
+
+.header {
+	position:relative;
+	padding: 0 !important;
 	box-shadow: 0px 0px 3px #888888;
 	border-radius: 3px;
 }
 /* 헤더 배경 */
 .header_background {
-	margin:0;
+	margin: 0;
 	padding: 22px;
 	height: 180px;
 	background: linear-gradient(90deg, #5A5A5A 0%, #3E3E3E 0.01%, #3E3E3E 37%, #5A5A5A
@@ -124,15 +131,20 @@ a {
 
 /* 로고이미지 사이즈조절 */
 #logo_img {
-	position:relative;
-	top:-5%;
+	position: relative;
+	top: -5%;
 	width: 120%;
 }
 /* 헤더 메인 네비게이션*/
 .main_nav {
+	z-index:1000;
+	position: sticky;
+	top: 0;
+	background: white;
 	border: 1px solid #dddddd;
 	border-radius: 3px;
 	font-family: 'Gyeonggi_Batang_Regular';
+	box-shadow: 0px 0px 3px #888888;
 }
 /* 헤더 메인 네비게이션 카테고리 */
 .main_nav_ui>li:first-child {
@@ -181,7 +193,7 @@ a {
 }
 /* 드롭다운 서브메뉴 우측으로나오게 */
 .dropdown-submenu .dropdown-menu {
-	top:0;
+	top: 0;
 	left: 101%;
 	width: 300px;
 	margin-top: 0;
@@ -189,6 +201,6 @@ a {
 	border: 1px solid #dddddd;
 }
 /* 드롭다운 서브메뉴 호버시 나오게 */
-.dropdown-submenu:hover > .dropdown-menu {
-      display: block;
+.dropdown-submenu:hover>.dropdown-menu {
+	display: block;
 }
