--- a/glowamber/bin/src/main/webapp/resources/css/Join.css
+++ b/glowamber/bin/src/main/webapp/resources/css/Join.css
@@ -88,33 +88,6 @@
 	font-size: 15px;
 	border-radius: 5px;
 }
-/*이름*/
-#join_name {
-	padding: 10px;
-}
-/*이름 창 여백*/
-#join_name>div:first-of-type {
-	padding-right: 0;
-}
-/*이름 창 제목*/
-#join_name>div:nth-of-type(2) {
-	text-align: right;
-	padding-top: 12px;
-	font-weight: bold;
-	font-size: 15px;
-}
-/*이름 입력창 테두리*/
-#join_name>div:nth-of-type(3) {
-	text-align: center;
-}
-/*이름 입력창*/
-#join_name>div:nth-of-type(3)>input {
-	width: 400px;
-	height: 50px;
-	font-size: 15px;
-	border-radius: 5px;
-}
-
 /*이메일 입력창 div 여백*/
 #join_email {
 	padding: 10px;
@@ -134,19 +107,12 @@
 #join_email>div:nth-of-type(3) {
 	text-align: center;
 }
-
-.email{
-	margin-left:10px !important;
-	margin-right:10px !important;
-	border: 2px solid #101010;
-}
-
-
 /*이메일 입력창 */
-#join_email>div:nth-of-type(3) {
-
-/* 	padding:0;
- */	
+#join_email>div:nth-of-type(3)>input {
+	width: 400px;
+	height: 50px;
+	font-size: 15px;
+	border-radius: 5px;
 }
 /*이메일 입력창 인증 버튼 테두리*/
 #join_email>div:nth-of-type(4) {
