--- a/glowamber/src/main/webapp/resources/css/Join.css
+++ b/glowamber/src/main/webapp/resources/css/Join.css
@@ -1,188 +1,79 @@
 @charset "UTF-8";
 
-/*회원가입 배너 */
-#join_membership>div:first-of-type {
+#join_membership div{
+ 	/*  border:2px solid blue; */   
+ 
+	padding:3px;
+}
+ 	 
+ 	 
+ }
+ /* 회원가입 베너 */
+.tit{
 	font-style: normal;
 	font-size: 32px;
 	margin-top: 40px;
 	margin-bottom: 40px;
 	text-align: center;
 	font-weight: bold;
+	
+} 
+ 
+/*입력란 크기(이메일 제외)*/
+.bm>input{
+	
+	width: 400px;
+	height: 45px;
+	font-size: 15px;
+	border-radius: 5px;
+	
+}
+/*이메일 입력란 */
+.em>input{
+	
+	width: 200px;
+	height: 45px;
+	font-size: 15px;
+	border-radius: 5px;
+	
+}
+/*이메일 주소 선택하기*/
+.combo{
+	width: 170px;
+	height: 45px;
+	font-size: 15px;
+	border-radius: 5px;
+}
+/*이메일 인증하기 버튼*/
+.ejoin{
+	width: 100px;
+	height: 45px;
+	font-size: 15px;
+	border-radius: 5px;
+	border: 2px solid #101010;
+	background-color: white;
 }
 
-/* 아이디 div 여백*/
-#join_id {
-	padding: 10px;
-}
-/*아이디창 여백*/
-#join_id>div:first-of-type {
-	padding-right: 0;
-}
-/*아이디 제목*/
-#join_id>div:nth-of-type(2) {
-	text-align: right;
-	padding-top: 12px;
-	font-weight: bold;
-	font-size: 15px;
-}
-/*아이디 입력창 테두리*/
-#join_id>div:nth-of-type(3) {
-	text-align: center;
-}
-/*아이디 입력창*/
-#join_id>div:nth-of-type(3)>input {
+/*주소 찾기 버튼*/
+.addr_btn{
 	width: 400px;
-	height: 50px;
+	height: 45px;
 	font-size: 15px;
 	border-radius: 5px;
-}
-/*비밀번호 입력창 div 여백*/
-#join_pass {
-	padding: 10px;
-}
-/*비밀번호 입력창 여백*/
-#join_pass>div:first-of-type {
-	padding-right: 0;
-}
-/*비밀번호 입력창 제목*/
-#join_pass>div:nth-of-type(2) {
-	text-align: right;
-	padding-top: 12px;
-	font-weight: bold;
-	font-size: 15px;
-}
-/*비밀번호 입력창 테두리*/
-#join_pass>div:nth-of-type(3) {
-	text-align: center;
-}
-/*비밀번호 입력창*/
-#join_pass>div:nth-of-type(3)>input {
-	width: 400px;
-	height: 50px;
-	font-size: 15px;
-	border-radius: 5px;
-}
-/*비밀번호 확인창  div 여백*/
-#join_repass {
-	padding: 10px;
-}
-/*비밀번호 확인창 여백*/
-#join_repass>div:first-of-type {
-	padding-right: 0;
-}
-/*비밀번호 확인창 제목*/
-#join_repass>div:nth-of-type(2) {
-	text-align: right;
-	padding-top: 12px;
-	font-weight: bold;
-	font-size: 15px;
-}
-/*비밀번호 확인 입력창 테두리*/
-#join_repass>div:nth-of-type(3) {
-	text-align: center;
-}
-/*비밀번호 확인 입력창*/
-#join_repass>div:nth-of-type(3)>input {
-	width: 400px;
-	height: 50px;
-	font-size: 15px;
-	border-radius: 5px;
-}
-/*이메일 입력창 div 여백*/
-#join_email {
-	padding: 10px;
-}
-/*이메일 입력창 여백*/
-#join_email>div:first-of-type {
-	padding-right: 0;
-}
-/*이메일 입력창 제목*/
-#join_email>div:nth-of-type(2) {
-	text-align: right;
-	padding-top: 12px;
-	font-weight: bold;
-	font-size: 15px;
-}
-/*이메일 입력창 테두리*/
-#join_email>div:nth-of-type(3) {
-	text-align: center;
-}
-/*이메일 입력창 */
-#join_email>div:nth-of-type(3)>input {
-	width: 400px;
-	height: 50px;
-	font-size: 15px;
-	border-radius: 5px;
-}
-/*이메일 입력창 인증 버튼 테두리*/
-#join_email>div:nth-of-type(4) {
-	padding-top: 5px;
-	text-align: left;
-}
-/*이메일 입력창 인증 버튼 */
-#join_email>div:nth-of-type(4)>button {
-	width: 150px;
-	height: 40px;
-	font-size: 15px;
-	border-radius: 5px;
-	background-color: #FFFFFF;
-}
-/*휴대폰  div 여백*/
-#join_cellphone {
-	padding: 10px;
-}
-/*전화번호 입력창 여백*/
-#join_cellphone>div:first-of-type {
-	padding-right: 0;
-}
-/*전화번호 입력창 제목*/
-#join_cellphone>div:nth-of-type(2) {
-	text-align: right;
-	padding-top: 12px;
-	font-weight: bold;
-	font-size: 15px;
-}
-/*전화번호 입력창 테두리*/
-#join_cellphone>div:nth-of-type(3) {
-	text-align: center;
-}
-/*전화번호 입력창*/
-#join_cellphone>div:nth-of-type(3)>input {
-	width: 400px;
-	height: 50px;
-	font-size: 15px;
-	border-radius: 5px;
-}
-/*주소  div 여백*/
-#join_address>div:first-of-type {
-	padding-right: 0;
-}
-/*주소창 제목*/
-#join_address>div:nth-of-type(2) {
-	text-align: right;
-	padding-top: 12px;
-	font-weight: bold;
-	font-size: 15px;
-}
-/*주소창 버튼 테두리 */
-#join_address>div:nth-of-type(3) {
-	text-align: center;
-}
-/*주소창 버튼*/
-#join_address>div:nth-of-type(3)>button {
-	width: 400px;
-	height: 50px;
-	font-size: 15px;
-	border-radius: 5px;
-	background-color: #FFFFFF;
+	border: 2px solid #101010;
+	background-color: white;
 }
 
+
+
+/* ************이용약관 동의*****************  */
 #join_agree {
 	margin-left: 105px;
 }
 
 #join_agree div {
-	  /*  border: 2px solid red;  */
+/* 	  border: 2px solid red; 
+ */	
 }
 /*전체동의 설명*/
 #join_detail {
@@ -197,13 +88,13 @@
 /*전체 동의 합니다*/
 .join_font {
 	font-size: 25px;
-	margin-top:4px;
+	margin-top: 4px;
 }
 /*약관보기*/
 .join_about {
-	font-size:12px;
+	font-size: 12px;
 	text-align: right;
-	margin-top:15px;
+	margin-top: 15px;
 }
 /*전제동의 아래 선택지 글*/
 div.join_d {
@@ -216,8 +107,8 @@ div.join_d {
 	padding: 10px;
 }
 /*SMS 이메일*/
-div.join_s{
-	margin-top:10px;
+div.join_s {
+	margin-top: 10px;
 	font-size: 15px;
 }
 
@@ -225,8 +116,8 @@ div.join_s{
 	width: 400px;
 	height: 50px;
 	font-size: 20px;
-	font-weight:bold;
+	font-weight: bold;
 	border-radius: 5px;
-	background-color:#101010;
-	color:#F8DE8B;
+	background-color: #101010;
+	color: #F8DE8B;
 }
